# unitoken

./: .gitignore  Cargo.toml  download.py  pyproject.toml  test.py
fixtures/: TinyStoriesV2-GPT4-train_words.json  _words.tinystories_sample_5M.json  merges.TinyStoriesV2-GPT4-train.txt  merges.tinystories_sample_5M.txt  tinystories_sample_5M_words.json  vocab.tinystories_sample_5M.json
python/unitoken/: __init__.py  _lib.pyi  encoder.py  trainer.py
src/: _metrics.rs  bpe.rs  lib.rs  main.rs  pretokenizer.rs  py.rs  traits.rs
src/bpe/: encoder.rs  mod.rs  trainer.rs  utils.rs
src/spec/: gpt2.rs  mod.rs  uni.rs
