[package]
name = "unitoken"
version = "0.1.0"
edition = "2024"

[dependencies]
fancy-regex = "0.16.2"
lazy_static = "1.5.0"
ordermap = { version = "1.0.0", features = ["serde"] }
memchr = "2.7.6"
serde_json = "1.0.145"
thiserror = "2.0.17"
rayon = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
moka = { version = "0.12.11", features = ["sync"] }

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "release"
debug = true
